--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -35,60 +35,56 @@
 					Hello! Find or Boost your career now!
 				</span>
 
-				<div class="wrap-input100 validate-input" data-validate="Name is required">
-					<span class="label-input100">Your Name</span>
-					<input class="input100" type="text" name="name" placeholder="Enter your name">
-					<span class="focus-input100"></span>
-				</div>
+				<form action="{{ url_for('index') }}" method="POST" role="form">
+					{{  form.hidden_tag() }}
 
-				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-					<span class="label-input100">Email</span>
-					<input class="input100" type="text" name="email" placeholder="Enter your email addess">
-					<span class="focus-input100"></span>
-				</div>
+						<div class="wrap-input100 validate-input" data-validate="Name is required">
+							<span class="label-input100">Your Name</span>
+							<input class="input100" type="text" name="name" placeholder="Enter your name">
+							<span class="focus-input100"></span>
+						</div>
 
-				<div class="wrap-input100 input100-select">
-					<span class="label-input100">What Skills do you have?</span>
-					<div>
-						<select class="selection-2" name="service">
-							<form action="{{ url_for('search') }}" method="POST" role="form">
-								<input type="text" name="skills_job">
-							</form>
-						</select>
-					</div>
-					<span class="focus-input100"></span>
-				</div>
+						<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+							<span class="label-input100">Email</span>
+							<input class="input100" type="text" name="email" placeholder="Enter your email addess">
+							<span class="focus-input100"></span>
+						</div>
 
-				<div class="wrap-input100 input100-select">
-					<span class="label-input100">Where</span>
-					<div>
-						<select class="selection-2" name="budget">
-							<option>Select Budget</option>
-							<option>1500 $</option>
-							<option>2000 $</option>
-							<option>2500 $</option>
-						</select>
-					</div>
-					<span class="focus-input100"></span>
-				</div>
+						<div class="wrap-input100 input100-select">
+							<span class="label-input100">What Skills do you have?</span>
+							<div>
+                    			{{ form.query(class="label-input100") }}
+							</div>
+							<span class="focus-input100"></span>
+						</div>
 
-				<div class="wrap-input100 validate-input" data-validate = "Message is required">
-					<span class="label-input100">Company</span>
-					<textarea class="input100" name="message" placeholder="Your message here..."></textarea>
-					<span class="focus-input100"></span>
-				</div>
+						<div class="wrap-input100 input100-select">
+							<span class="label-input100">Where?</span>
+							<div>
+                    			{{ form.city(class="label-input100") }}
+							</div>
+							<span class="focus-input100"></span>
+						</div>
 
-				<div class="container-contact100-form-btn">
-					<div class="wrap-contact100-form-btn">
-						<div class="contact100-form-bgbtn"></div>
-						<button class="contact100-form-btn">
-							<span>
-								Submit
-								<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
-							</span>
-						</button>
-					</div>
-				</div>
+						<div class="wrap-input100 validate-input" data-validate = "Message is required">
+							<span class="label-input100">Which company?</span>
+							<div>
+                    			{{ form.company(class="label-input100") }}
+							</div>
+							<span class="focus-input100"></span>
+						</div>
+
+						<div class="container-contact100-form-btn">
+							<div class="wrap-contact100-form-btn">
+								<div class="contact100-form-bgbtn"></div>
+								<button class="contact100-form-btn">
+									<span>
+										{{ form.submit(class="focus-input100" ) }}
+									</span>
+								</button>
+							</div>
+						</div>
+				</form>
 			</form>
 		</div>
 	</div>
