--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -30,7 +30,6 @@
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form">
 				<span class="contact100-form-title">
 					Hello! Find or Boost your career now!
 				</span>
@@ -38,15 +37,19 @@
 				<form action="{{ url_for('index') }}" method="POST" role="form">
 					{{  form.hidden_tag() }}
 
-						<div class="wrap-input100 validate-input" data-validate="Name is required">
+						<div class="wrap-input100 validate-input">
 							<span class="label-input100">Your Name</span>
-							<input class="input100" type="text" name="name" placeholder="Enter your name">
+							<div>
+								{{ form.name(class="label-input100") }}
+							</div>
 							<span class="focus-input100"></span>
 						</div>
 
-						<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<div class="wrap-input100 validate-input">
 							<span class="label-input100">Email</span>
-							<input class="input100" type="text" name="email" placeholder="Enter your email addess">
+							<div>
+								{{ form.email(class="label-input100") }}
+							</div>
 							<span class="focus-input100"></span>
 						</div>
 
@@ -77,7 +80,7 @@
 						<div class="container-contact100-form-btn">
 							<div class="wrap-contact100-form-btn">
 								<div class="contact100-form-bgbtn"></div>
-								<button class="contact100-form-btn">
+								<button class="contact100-form-btn" type="submit">
 									<span>
 										{{ form.submit(class="focus-input100" ) }}
 									</span>
@@ -85,7 +88,6 @@
 							</div>
 						</div>
 				</form>
-			</form>
 		</div>
 	</div>
 
